Add iCable scraping pipeline and downloader

--- a/News_Videos_Scraping/iCable_News_Videos_Scraping/iCable_News_Scraper.ipynb
+++ b/News_Videos_Scraping/iCable_News_Videos_Scraping/iCable_News_Scraper.ipynb
@@ -1177,6 +1177,188 @@
    "source": [
     "datapd"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfd9650f",
+   "metadata": {},
+   "source": [
+    "# Categorizing Videos by Program Name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78068a71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>url</th>\n",
+       "      <th>source</th>\n",
+       "      <th>title</th>\n",
+       "      <th>description</th>\n",
+       "      <th>visited</th>\n",
+       "      <th>m3u8_url</th>\n",
+       "      <th>downloaded</th>\n",
+       "      <th>m3u8_url_cleaned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4196</th>\n",
+       "      <td>4196</td>\n",
+       "      <td>https://www.i-cable.com/%e6%96%b0%e8%81%9e%e8%...</td>\n",
+       "      <td>資訊節目</td>\n",
+       "      <td>同行45載，與你相伴連繫 │ 載向未來</td>\n",
+       "      <td>【有線新聞】港鐵進入新一個鐵路建設期，將投入過千億建造新鐵路項目，多個項目涉及在營運中的鐵路...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://vod.i-cable.com/FL00191_logo/NEWSHLS/F...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://vod.i-cable.com/FL00191_logo/NEWSHLS/F...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4614</th>\n",
+       "      <td>4614</td>\n",
+       "      <td>https://www.i-cable.com/%e6%96%b0%e8%81%9e%e8%...</td>\n",
+       "      <td>資訊節目</td>\n",
+       "      <td>同行45載，與你相伴連繫 │ 放眼世界</td>\n",
+       "      <td>【有線新聞】過去15年，港鐵先後在深圳、澳洲、英國及瑞典等地，發展及營運多項鐵路項目，並調派...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://vod.i-cable.com/FL00190_logo/NEWSHLS/F...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://vod.i-cable.com/FL00190_logo/NEWSHLS/F...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4987</th>\n",
+       "      <td>4987</td>\n",
+       "      <td>https://www.i-cable.com/%e6%96%b0%e8%81%9e%e8%...</td>\n",
+       "      <td>資訊節目</td>\n",
+       "      <td>同行45載，與你相伴連繫 │ 建設社區</td>\n",
+       "      <td>【有線新聞】港鐵創立至今，一直秉乘推動城市前行的服務宗旨，除了為老舊社區注入新活力的港島綫西...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://vod.i-cable.com/N-20241014-(MTR)COMM-l...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://vod.i-cable.com/N-20241014-(MTR)COMM-l...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5349</th>\n",
+       "      <td>5349</td>\n",
+       "      <td>https://www.i-cable.com/%e6%96%b0%e8%81%9e%e8%...</td>\n",
+       "      <td>資訊節目</td>\n",
+       "      <td>同行45載，與你相伴連繫 │ 乘心服務</td>\n",
+       "      <td>【有線新聞】港鐵通車45年以來，一直緊守「以客為先」的服務宗旨，不斷全方位改善服務質素。向員...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://vod.i-cable.com/FL00188_logo/NEWSHLS/F...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>https://vod.i-cable.com/FL00188_logo/NEWSHLS/F...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        ID                                                url source  \\\n",
+       "4196  4196  https://www.i-cable.com/%e6%96%b0%e8%81%9e%e8%...   資訊節目   \n",
+       "4614  4614  https://www.i-cable.com/%e6%96%b0%e8%81%9e%e8%...   資訊節目   \n",
+       "4987  4987  https://www.i-cable.com/%e6%96%b0%e8%81%9e%e8%...   資訊節目   \n",
+       "5349  5349  https://www.i-cable.com/%e6%96%b0%e8%81%9e%e8%...   資訊節目   \n",
+       "\n",
+       "                    title                                        description  \\\n",
+       "4196  同行45載，與你相伴連繫 │ 載向未來  【有線新聞】港鐵進入新一個鐵路建設期，將投入過千億建造新鐵路項目，多個項目涉及在營運中的鐵路...   \n",
+       "4614  同行45載，與你相伴連繫 │ 放眼世界  【有線新聞】過去15年，港鐵先後在深圳、澳洲、英國及瑞典等地，發展及營運多項鐵路項目，並調派...   \n",
+       "4987  同行45載，與你相伴連繫 │ 建設社區  【有線新聞】港鐵創立至今，一直秉乘推動城市前行的服務宗旨，除了為老舊社區注入新活力的港島綫西...   \n",
+       "5349  同行45載，與你相伴連繫 │ 乘心服務  【有線新聞】港鐵通車45年以來，一直緊守「以客為先」的服務宗旨，不斷全方位改善服務質素。向員...   \n",
+       "\n",
+       "      visited                                           m3u8_url  downloaded  \\\n",
+       "4196     True  https://vod.i-cable.com/FL00191_logo/NEWSHLS/F...        True   \n",
+       "4614     True  https://vod.i-cable.com/FL00190_logo/NEWSHLS/F...        True   \n",
+       "4987     True  https://vod.i-cable.com/N-20241014-(MTR)COMM-l...        True   \n",
+       "5349     True  https://vod.i-cable.com/FL00188_logo/NEWSHLS/F...        True   \n",
+       "\n",
+       "                                       m3u8_url_cleaned  \n",
+       "4196  https://vod.i-cable.com/FL00191_logo/NEWSHLS/F...  \n",
+       "4614  https://vod.i-cable.com/FL00190_logo/NEWSHLS/F...  \n",
+       "4987  https://vod.i-cable.com/N-20241014-(MTR)COMM-l...  \n",
+       "5349  https://vod.i-cable.com/FL00188_logo/NEWSHLS/F...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "prog_name = \"同行45載，與你相伴連繫\"\n",
+    "filtered_rows = datapd[datapd['title'].str.contains(prog_name, na=False)]\n",
+    "filtered_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b28dde3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moved ./icable Scraped Videos/4196.mp4 to ./icable_categorized/同行45載，與你相伴連繫/4196.mp4\n",
+      "Moved ./icable Scraped Videos/4614.mp4 to ./icable_categorized/同行45載，與你相伴連繫/4614.mp4\n",
+      "Moved ./icable Scraped Videos/4987.mp4 to ./icable_categorized/同行45載，與你相伴連繫/4987.mp4\n",
+      "Moved ./icable Scraped Videos/5349.mp4 to ./icable_categorized/同行45載，與你相伴連繫/5349.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "destination_folder = f\"./FYP/icable_categorized/{prog_name}/\"\n",
+    "\n",
+    "\n",
+    "os.makedirs(destination_folder, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "for _, row in filtered_rows.iterrows():\n",
+    "    \n",
+    "    video_id = row['ID']\n",
+    "    \n",
+    "    \n",
+    "    source_file = f\"./FYP/icable Scraped Videos/{video_id}.mp4\"\n",
+    "    destination_file = os.path.join(destination_folder, f\"{video_id}.mp4\")\n",
+    "    \n",
+    "    \n",
+    "    if os.path.exists(source_file):\n",
+    "        shutil.move(source_file, destination_file)\n",
+    "        print(f\"Moved {source_file} to {destination_file}\")\n",
+    "    else:\n",
+    "        print(f\"File {source_file} not found.\")\n"
+   ]
   }
  ],
  "metadata": {
